@@ -60,7 +60,16 @@ module Cucumber
     it "should accept --no-snippets option" do
       cli = CLI.new
       cli.parse_options!(%w{--no-snippets})
+      
       cli.options[:snippets].should be_false
+    end
+
+    it "should accept --quiet option" do
+      cli = CLI.new
+      cli.parse_options!(%w{--quiet})
+      
+      cli.options[:snippets].should be_false
+      cli.options[:source].should be_false
     end
 
     it "should accept --out option" do
